ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - watterssu.com
    secretName: portfolio-tls
  rules:
  - host: watterssu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-service  # 방금 확인한 서비스 이름과 일치!
            port:
              number: 80             # 방금 확인한 포트와 일치!
